Correctly aligns full size image

--- a/style-built.css
+++ b/style-built.css
@@ -98,4 +98,12 @@ h3 {
 	bottom: 0;
 	left: 0;
 	right: 0;
+	text-align: center;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+}
+.full-screen-image img {
+	max-width: 100%;
+	max-height: 100%;
 }
